fixed push issues
fixed duplicated keys issue due to add .env file

fixed playright tests 2

fixed playright tests

fixed API UI and JUnit tests

added confluence integration

added material design

initial commit